<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp"
    app:strokeColor="@color/backgroundColor"
    app:strokeWidth="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:text="@string/Quit"
            android:textColor="@color/backgroundColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yesBtn"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginVertical="4dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/Ya"
                android:textSize="20sp" />

            <Button
                android:id="@+id/noBtn"
                style="@style/Widget.App.Button.Outline"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/Tidak"
                android:backgroundTint="@color/white"
                android:textColor="@color/buttonColor"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>