<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp"
    app:strokeColor="@color/backgroundColor"
    app:cardPreventCornerOverlap="false"
    app:strokeWidth="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correct"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/correct_color"/>
                <TextView
                    android:id="@+id/correctScoreTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_question3"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/correct_color"/>
            </LinearLayout>

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:background="@color/backgroundColor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/wrong_color"/>
                <TextView
                    android:id="@+id/wrongScoreTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_question3"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/wrong_color"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/backgroundColor"
            app:cardPreventCornerOverlap="false"
            app:strokeWidth="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/levelBtn"
                    style="@style/Widget.App.Button.Fill"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/level"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/nextResumeOrRestartBtn"
                    style="@style/Widget.App.Button.Outline"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_outline"
                    android:text="@string/resume"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>